add footer,search functionality,single data

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .markdown {
+    @apply prose mx-auto sm:prose-2xl prose-p:text-base  sm:prose-li:text-base  prose-li:text-small prose-headings:font-primary prose-p:font-primary
+    prose-li:font-primary
+    prose-h1:text-h1
+    prose-h2:text-h2
+    prose-h3:text-h3
+    prose-h4:text-h4
+    /* prose-a:hover */
+    prose-a:no-underline;
+  }
+}
